| Summary: | ASTERISK-29089: RTP Ports not cleared after hangup | ||
| Reporter: | Ross Beer (rossbeer) | Labels: | |
| Date Opened: | 2020-09-21 08:51:24 | Date Closed: | 2020-09-23 09:56:47 |
| Priority: | Major | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_rtp_asterisk |
| Versions: | GIT | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | CentOS 7 | Attachments: | |
| Description: | After Asterisk GIT-16-ab34417M some resources do not appear to be cleared after a call ends.
This has been confirmed on the #asterisk-dev chat where testing has also picked up the issue. The following CLI output is displayed when the resources have been used up: {quote} [2020-09-21 13:37:48] ERROR[43037]: res_rtp_asterisk.c:3798 rtp_allocate_transport: Oh dear... we couldn't allocate a port for RTP instance '0x7fa3d4bf3350' [2020-09-21 13:37:48] WARNING[43037]: res_rtp_asterisk.c:2790 dtls_srtp_stop_timeout_timer: Unable to cancel schedule ID 0. This is probably a bug (res_rtp_asterisk.c: dtls_srtp_stop_timeout_timer, line 2790). [2020-09-21 13:37:48] ERROR[43037]: res_pjsip_sdp_rtp.c:272 create_rtp: Unable to create RTP instance using RTP engine 'asterisk' [2020-09-21 13:37:48] ERROR[43037]: res_pjsip_session.c:932 handle_incoming_sdp: <endpoint>: Couldn't negotiate stream 0:audio-0:audio:sendrecv (nothing) {quote} | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-09-21 08:51:25.855-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Joshua C. Colp (jcolp) 2020-09-21 08:55:05.003-0500 FYI, the error message "Couldn't negotiate stream" only exists in 18 - it is not present in 16. By: Ross Beer (rossbeer) 2020-09-21 10:09:31.765-0500 That's strange as I did a show version on both servers and didn't notice it say 18. Checking the source code used it's also 16 By: Joshua C. Colp (jcolp) 2020-09-21 10:28:06.568-0500 Ah nevermind, case sensitive search got me. It is in 16 too. By: Friendly Automation (friendly-automation) 2020-09-23 09:56:49.063-0500 Change 14982 merged by Joshua Colp: res_pjsip_session: Fix session reference leak. [https://gerrit.asterisk.org/c/asterisk/+/14982|https://gerrit.asterisk.org/c/asterisk/+/14982] By: Friendly Automation (friendly-automation) 2020-09-23 10:01:09.124-0500 Change 14933 merged by Joshua Colp: res_pjsip_session: Fix session reference leak. [https://gerrit.asterisk.org/c/asterisk/+/14933|https://gerrit.asterisk.org/c/asterisk/+/14933] By: Friendly Automation (friendly-automation) 2020-09-23 10:03:07.987-0500 Change 14983 merged by Joshua Colp: res_pjsip_session: Fix session reference leak. [https://gerrit.asterisk.org/c/asterisk/+/14983|https://gerrit.asterisk.org/c/asterisk/+/14983] By: Friendly Automation (friendly-automation) 2020-09-23 10:04:00.101-0500 Change 14984 merged by Joshua Colp: res_pjsip_session: Fix session reference leak. [https://gerrit.asterisk.org/c/asterisk/+/14984|https://gerrit.asterisk.org/c/asterisk/+/14984] By: Friendly Automation (friendly-automation) 2020-09-23 10:04:16.721-0500 Change 14985 merged by Joshua Colp: res_pjsip_session: Fix session reference leak. [https://gerrit.asterisk.org/c/asterisk/+/14985|https://gerrit.asterisk.org/c/asterisk/+/14985] | ||